rapport de tests
Test avec defconfig sur le script plutôt que randconfig : secclas_map // mdp 

  HOSTCC  scripts/selinux/genheaders/genheaders
In file included from ../scripts/selinux/genheaders/genheaders.c:18:
../security/selinux/include/classmap.h:242:2: error: #error New address family defined, please update secclass_map.
  242 | #error New address family defined, please update secclass_map.
      |  ^~~~~
  MKELF   scripts/mod/elfconfig.h
  CHK     scripts/mod/devicetable-offsets.h
make[4]: *** [scripts/Makefile.host:101 : scripts/selinux/genheaders/genheaders] Erreur 1
make[3]: *** [../scripts/Makefile.build:561 : scripts/selinux/genheaders] Erreur 2
make[3]: *** Attente des tâches non terminées....
  HOSTCC  scripts/kallsyms
  UPD     scripts/mod/devicetable-offsets.h
  HOSTCC  scripts/mod/sumversion.o
  HOSTCC  scripts/selinux/mdp/mdp
In file included from ../scripts/selinux/mdp/mdp.c:49:
../security/selinux/include/classmap.h:242:2: error: #error New address family defined, please update secclass_map.
  242 | #error New address family defined, please update secclass_map.
      |  ^~~~~
make[4]: *** [scripts/Makefile.host:101 : scripts/selinux/mdp/mdp] Erreur 1
make[3]: *** [../scripts/Makefile.build:561 : scripts/selinux/mdp] Erreur 2
  CC      kernel/bounds.s
make[2]: *** [../scripts/Makefile.build:561 : scripts/selinux] Erreur 2
make[2]: *** Attente des tâches non terminées....
  CHK     include/generated/timeconst.h
  UPD     include/generated/timeconst.h
  CHK     include/generated/bounds.h
  UPD     include/generated/bounds.h
  CC      arch/x86/kernel/asm-offsets.s
  HOSTCC  scripts/mod/modpost.o
  HOSTCC  scripts/mod/file2alias.o
  CHK     include/generated/asm-offsets.h
  UPD     include/generated/asm-offsets.h
  CALL    ../scripts/checksyscalls.sh
  HOSTLD  scripts/mod/modpost
make[1]: *** [/home/simon/tuxml-kci/kernel_version/Makefile:561 : scripts] Erreur 2
make[1] : on quitte le répertoire « /home/simon/tuxml-kci/kernel_version/build »
make: *** [Makefile:145 : sub-make] Erreur 2
make : on quitte le répertoire « /home/simon/tuxml-kci/kernel_version »


*******************************************************************************

Test avec make defconfig dans le dossier kernel_version dans, indépendamment du script. 

In file included from ../scripts/selinux/genheaders/genheaders.c:18:
../security/selinux/include/classmap.h:242:2: error: #error New address family defined, please update secclass_map.
  242 | #error New address family defined, please update secclass_map.

*******************************************************************************

test avec randconfig

  LZO     arch/x86/boot/compressed/vmlinux.bin.lzo
/bin/sh: 1: lzop: not found
make[3]: *** [../arch/x86/boot/compressed/Makefile:133 : arch/x86/boot/compressed/vmlinux.bin.lzo] Erreur 1
make[3]: *** Attente des tâches non terminées....



